# Data_engineering_copilot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: data-engineer.agent.md  docs-writer.agent.md  dq-auditor.agent.md  pipeline-architect.agent.md  security-reviewer.agent.md  test-generator.agent.md
.github/hooks/: quality-gate.hooks.json  security-scan.hooks.json
.github/instructions/: pipeline-yaml.instructions.md  pyspark.instructions.md  sql.instructions.md  testing.instructions.md
.github/mcp/: mcp.json
.github/prompts/: add-dq-check.prompt.md  document-table.prompt.md  generate-pipeline.prompt.md  new-notebook.prompt.md  release-notes.prompt.md  review-notebook.prompt.md  write-tests.prompt.md
.github/workflows/: ci.yml  data-quality-gate.yml  deploy-to-fabric.yml  integration-tests.yml
connections/: source_api_weather.yaml  source_postgres.yaml  source_sftp_inventory.yaml
data_quality/checkpoints/: default_checkpoint.yaml
data_quality/expectations/: bronze_pos_transactions.json  gold_fact_sales.json  silver_clean_transactions.json
docs/: architecture.md  copilot_features_guide.md  data_dictionary.md
notebooks/_shared/: delta_utils.py  logging_config.py  schema_registry.py  spark_session.py
notebooks/bronze/: ingest_clickstream.py  ingest_customers.py  ingest_inventory.py  ingest_pos_transactions.py
notebooks/gold/: build_customer_360.py  build_dim_customer.py  build_dim_product.py  build_fact_sales.py
notebooks/silver/: clean_customers.py  clean_inventory.py  clean_transactions.py  sessionise_clicks.py
pipelines/: daily_full_refresh.yaml  hourly_incremental.yaml
pipelines/schemas/: pipeline_schema.json
scripts/: seed_data.py  setup_local_env.sh
scripts/hooks/: block-secrets.sh  log-error.sh  run-tests-before-commit.sh  scan-for-pii.sh
tests/: conftest.py
tests/integration/: test_bronze_to_silver.py
(+13 files in other folders)
